Fix for bug 10225 -- Gave the Byline area a fixed height so that it will be considered in accordion mode calculations -- also prevents Remove/Save buttons from jumping up and down when the form is populated/emptied. Also changed CSS class selector to an id selector to speed rendering, since the styling should only ever apply to this single item. Also renamed misnamed function from show/hide to enable/disable, and added FIXME about setting the displayed status of at-time/any-time events to blank instead of Confirmed. Misc. formatting cleanup.
git-svn-id: svn+ssh://svn.osafoundation.org/svn/server/cosmo/trunk@5319 5fd0b11a-f2f7-0310-948e-c8f80ebed640

--- a/cosmo/src/main/webapp/templates/default/pim.css
+++ b/cosmo/src/main/webapp/templates/default/pim.css
@@ -458,11 +458,13 @@
     background-color: #fbfbfb; 
     border-bottom: 1px solid #ccc;
 }
-.byline {
+#detailViewByline {
+    height: 24px;
+    padding: 4px 10px 0px 10px;
     border-top: 1px solid #ccc;
-	font-weight: bold;
-	font-size: smaller;
-	padding: 5px 10px;
+	  font-weight: bold;
+	  font-size: 10px;
+    line-height: 12px;
     color: #808080;
 }
 
